[gd_scene load_steps=2 format=3 uid="uid://bugqgwvtoujwf"]

[ext_resource type="Script" path="res://ui/GameOver/GameOver.gd" id="1_1fe2u"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_1fe2u")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.25098, 0, 0, 0.501961)

[node name="Centered" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Centered"]
layout_mode = 2
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="Centered/MarginContainer"]
custom_minimum_size = Vector2(512, 0)
layout_mode = 2

[node name="GameOver" type="Label" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_type_variation = &"HeaderLarge"
theme_override_colors/font_color = Color(1, 0, 0, 1)
text = "Game Over"
horizontal_alignment = 1

[node name="Killer" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/Killer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Slain By"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Centered/MarginContainer/VBoxContainer/Killer"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmphasisLabel"
text = "Skelly 123"

[node name="Damage" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/Damage"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage Taken"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Centered/MarginContainer/VBoxContainer/Damage"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="Level" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/Level"]
layout_mode = 2
size_flags_horizontal = 3
text = "Level"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Centered/MarginContainer/VBoxContainer/Level"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="DamageDealt" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/DamageDealt"]
layout_mode = 2
size_flags_horizontal = 3
text = "Damage Dealt"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Centered/MarginContainer/VBoxContainer/DamageDealt"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="Defeated" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/Defeated"]
layout_mode = 2
size_flags_horizontal = 3
text = "Defeated"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Centered/MarginContainer/VBoxContainer/Defeated"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="Survived" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/Survived"]
layout_mode = 2
size_flags_horizontal = 3
text = "Survived"
horizontal_alignment = 2

[node name="Value" type="Label" parent="Centered/MarginContainer/VBoxContainer/Survived"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_type_variation = &"EmphasisLabel"
text = "100s"

[node name="NewGame" type="Button" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "New Game"

[node name="Seed" type="HBoxContainer" parent="Centered/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="Centered/MarginContainer/VBoxContainer/Seed"]
layout_mode = 2
text = "Seed"

[node name="Value" type="LineEdit" parent="Centered/MarginContainer/VBoxContainer/Seed"]
custom_minimum_size = Vector2(128, 0)
layout_mode = 2
text = "dfhdfghdf"
alignment = 1
max_length = 9

[node name="RandomizeSeed" type="Button" parent="Centered/MarginContainer/VBoxContainer/Seed"]
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
text = "?"

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="Centered/MarginContainer/VBoxContainer/NewGame" to="." method="_on_new_game_pressed"]
[connection signal="pressed" from="Centered/MarginContainer/VBoxContainer/Seed/RandomizeSeed" to="." method="_on_randomize_seed_pressed"]
